<?xml version="1.0"?>
<package format="3">
  <name>pd_ff_controller</name>
  <version>0.1.0</version>
  <description>PD + torque feedforward chainable controller</description>
  <maintainer email="robertofausti@cnr.it">Roberto Fausti</maintainer>
  <license>Apache-2.0</license>

  <depend>controller_interface</depend>
  <depend>std_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>generate_parameter_library</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>lifecycle_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
